--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="item1">Напишите нам - обсудим ваш проект👇</div>
         </div>
       </div>
-      <a href="https://t.me/m/gzooM2YeYzBi" class="button">SEND MESSAGE</a>
+      <a href="https://t.me/m/A8iS87afN2Fi" class="button">SEND MESSAGE</a>
     </div>
   </body>
 </html>
